welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:23: error: object java.awt.Color is not a value
  return color==Color
                ^