welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  var biscuit=false
  while(biscuit==false){
  if (isFacingTrail(c:Color)){
    avance()
    baisseBrosse()
    if (estSurBiscuit){
      prendBiscuit()
      biscuit=true
    }
  }
  else gauche()
  leveBrosse()
  }
}

def isFacingTrail(c:Color):Boolean = {
  if (!estFaceMur){
  avance()
  var color=getCouleurSol()
  recule()
  return color==Color
  }
  else return false
}